// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Span /> should match the snapshot 1`] = `
.c0 {
  color: #555;
}

<span
  className="c0"
>
  test
</span>
`;

exports[`<Span /> should render without throwing an error 1`] = `
.c0 {
  color: #555;
}

<span
  className="c0"
/>
`;
